--- a/posts/api-authorization-design.mdx
+++ b/posts/api-authorization-design.mdx
@@ -140,7 +140,7 @@ The following extra claims are looked up when the API first receives its access 
 
 | Extra Claim | Description |
 | ----------- | ----------- |
-| <span style={{color:'green'}}>**Title**</span> | A business title for the end user in a particular context, which is displayed by the frontend application. |
+| <span style={{color:'green'}}>**Title**</span> | A business title for the user in a particular context, which is displayed by the frontend application. |
 | <span style={{color:'green'}}>**Regions**</span> | An array claim representing a simplified version of the branches concept described at the start of this post. |
 
 The API authorizes access to resources using both the *role* from the access token and the *regions* array from the extra claims:
