--- a/posts/api-journey-server-side.mdx
+++ b/posts/api-journey-server-side.mdx
@@ -232,7 +232,7 @@ When there is a server error, the API returns additional information to support 
   "code": "exception_simulation",
   "message": "An unexpected exception occurred in the API",
   "id": 79072,
-  "area": "SampleApi",
+  "area": "FinalApi",
   "utcTime": "2022-07-24T10:28:00.438Z"
 ```
 
@@ -244,7 +244,7 @@ I design API request logs to be easy for people to query. When there is a client
 {
   "id": "7af62b06-8c04-41b0-c428-de332436d52a",
   "utcTime": "2022-07-24T10:27:33.468Z",
-  "apiName": "SampleApi",
+  "apiName": "FinalApi",
   "operationName": "getCompanyTransactions",
   "hostName": "MACSTATION.local",
   "method": "GET",
@@ -274,7 +274,7 @@ When there is a server error I write a log entry that includes a unique *Error I
 {
   "id": "b36701c9-ddf2-d7da-df48-4dfcc918009b",
   "utcTime": "2022-07-24T10:28:00.435Z",
-  "apiName": "SampleApi",
+  "apiName": "FinalApi",
   "operationName": "getCompanyTransactions",
   "hostName": "MACSTATION.local",
   "method": "GET",
@@ -295,7 +295,7 @@ When there is a server error I write a log entry that includes a unique *Error I
       "code": "exception_simulation",
       "message": "An unexpected exception occurred in the API",
       "id": 79072,
-      "area": "SampleApi",
+      "area": "FinalApi",
       "utcTime": "2022-07-24T10:28:00.438Z"
     },
     "serviceError": {
