--- a/posts/basicapi-codingkeypoints.mdx
+++ b/posts/basicapi-codingkeypoints.mdx
@@ -369,7 +369,7 @@ Errors are included in logs, where I log backend errors, such as network errors 
       "code": "jwks_download_error",
       "message": "Problem downloading token signing keys",
       "id": 45244,
-      "area": "SampleApi",
+      "area": "BasicApi",
       "utcTime": "2024-04-07T19:19:45.027Z"
     },
     "serviceError": {
