--- a/posts/final-nodeapi-coding-key-points.mdx
+++ b/posts/final-nodeapi-coding-key-points.mdx
@@ -298,9 +298,9 @@ Error output for developers has a *productive and readable format*, and producti
 {
   "id": "2b9de255-808b-10f9-cb01-79d76a851b27",
   "utcTime": "2022-12-10T13:02:46.234Z",
-  "apiName": "SampleApi",
+  "apiName": "FinalApi",
   "operationName": "getCompanyList",
-  "hostName": "WORK",
+  "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/companies",
   "clientApplicationName": "FinalSPA",
@@ -328,7 +328,7 @@ Error output for developers has a *productive and readable format*, and producti
       "code": "exception_simulation",
       "message": "An unexpected exception occurred in the API",
       "id": 95739,
-      "area": "SampleApi",
+      "area": "FinalApi",
       "utcTime": "2022-12-10T13:02:46.237Z"
     },
     "serviceError": {
