--- a/posts/ios-code-sample-overview.mdx
+++ b/posts/ios-code-sample-overview.mdx
@@ -35,7 +35,7 @@ There will also be a details view, which exists primarily  to demonstrate naviga
 
 ### Single Page iOS Application
 
-Our mobile UI will have identical functionality to the final React SPA, where the main section of the view is swapped out as the user navigates. This is more efficient than replacing entire screens, and makes the app feel faster for end users.
+Our mobile UI will have identical functionality to the final React SPA, where the main section of the view is swapped out as the user navigates. This is more efficient than replacing entire screens, and makes the app feel faster for users.
 
 ### Modern UI Technology
 
@@ -128,7 +128,7 @@ Logins can be cancelled by closing the system browser instead of successfully co
 
 ### Reliable Session Management
 
-The demo app also has buttons to enable *Rehearsal of Expiry Events*, in order to verify that these do not cause any end user problems:
+The demo app also has buttons to enable *Rehearsal of Expiry Events*, in order to verify that these do not cause any user problems:
 
 <div className="smallimage">
 ![expiry testing](/images/540/expiry-testing.jpg?v=20240713)
@@ -170,7 +170,7 @@ https://mobile.authsamples.com/finalmobileapp/deeplink/companies/3
 https://mobile.authsamples.com/finalmobileapp/deeplink/companies/abc
 ```
 
-In both cases our API will deny access gracefully by returning known error codes to the mobile app, which will then navigate back to the home page, so that the end user is not impacted.
+In both cases our API will deny access gracefully by returning known error codes to the mobile app, which will then navigate back to the home page, so that the user is not impacted.
 
 ### Problems Receiving Redirect Responses
 
