--- a/posts/java-spring-boot-api-overview.mdx
+++ b/posts/java-spring-boot-api-overview.mdx
@@ -39,7 +39,7 @@ I use the free community edition of [Intellj Idea](https://www.jetbrains.com/ide
 
 ![java-ide](/images/350/java-ide.jpg)
 
-Then wait for the gradle sync to complete, which will take a couple of minutes. Then you can run the SampleApiApplication.java file, to run the API and listen for requests at an HTTPS URL.
+Then wait for the gradle sync to complete, which will take a couple of minutes. Then you can run the FinalApiApplication.java file, to run the API and listen for requests at an HTTPS URL.
 
 ### Prerequisite 4: Optionally Install Node.js
 
@@ -174,7 +174,7 @@ The other main objective of the API code sample will be JSON logging of API requ
 {
   "id" : "b8ae0e13-0752-4ce1-ac3c-692c26528855",
   "utcTime" : "2022-12-10T13:30:42.032527148Z",
-  "apiName" : "SampleApi",
+  "apiName" : "FinalApi",
   "operationName" : "getCompanyTransactions",
   "hostName" : "WORK",
   "method" : "GET",
