--- a/posts/net-core-api-coding-model.mdx
+++ b/posts/net-core-api-coding-model.mdx
@@ -227,9 +227,9 @@ Error output has a *productive and readable* format, and production logs will al
 {
   "id": "0ff96924-1c02-469a-a5de-a1a6b7911ab2",
   "utcTime": "2022-12-10T13:25:40",
-  "apiName": "SampleApi",
+  "apiName": "FinalApi",
   "operationName": "GetCompanyTransactions",
-  "hostName": "WORK",
+  "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/companies/4/transactions",
   "resourceId": "4",
