--- a/posts/net-core-code-sample-overview.mdx
+++ b/posts/net-core-code-sample-overview.mdx
@@ -159,9 +159,9 @@ The other main objective of the API code sample will be JSON logging of API requ
 {
   "id": "57b5b054-55bc-2515-65f9-cd7f66919788",
   "utcTime": "2022-12-10T12:57:52.451Z",
-  "apiName": "SampleApi",
+  "apiName": "FinalApi",
   "operationName": "getUserInfo",
-  "hostName": "WORK",
+  "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/userinfo",
   "clientApplicationName": "FinalSPA",
