--- a/posts/serverless-api-deployment.mdx
+++ b/posts/serverless-api-deployment.mdx
@@ -81,7 +81,7 @@ The Serverless API uses the same JSON based approach to configuration as earlier
         "proxyUrl": ""
     },
     "logging": {
-        "apiName": "SampleApi",
+        "apiName": "FinalApi",
         "prettyPrint": false,
         "performanceThresholdMilliseconds": 500
     },
