--- a/posts/serverless-api-overview.mdx
+++ b/posts/serverless-api-overview.mdx
@@ -129,9 +129,9 @@ The API uses our <Link href='/posts/effective-api-logging'>Effective API Logging
 {
   "id": "14d694e1-d7dd-fa46-7fd5-7cef812e4a6a",
   "utcTime": "2023-03-20T18:19:55.674Z",
-  "apiName": "SampleApi",
+  "apiName": "FinalApi",
   "operationName": "getCompanyTransactions",
-  "hostName": "WORK",
+  "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/companies/2/transactions",
   "resourceId": "2",
@@ -157,9 +157,9 @@ The final test exercises this behaviour, and results in the following log entry.
 {
   "id": "faa151ac-6006-8b4d-4c11-8a2e0b6a4aa8",
   "utcTime": "2023-03-20T18:19:58.376Z",
-  "apiName": "SampleApi",
+  "apiName": "FinalApi",
   "operationName": "getCompanyTransactions",
-  "hostName": "WORK",
+  "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/companies/4/transactions",
   "resourceId": "4",
@@ -192,7 +192,7 @@ The final test exercises this behaviour, and results in the following log entry.
       "code": "exception_simulation",
       "message": "An exception was simulated in the API",
       "id": 28603,
-      "area": "SampleApi",
+      "area": "FinalApi",
       "utcTime": "2023-03-20T18:19:58.395Z"
     },
     "serviceError": {
