--- a/posts/spring-boot-api-coding-model.mdx
+++ b/posts/spring-boot-api-coding-model.mdx
@@ -18,7 +18,7 @@ In a real API platform, much of the plumbing folder could be extracted into one 
 
 ### Application Startup Logic
 
-Our API entry point is the below *SampleApiApplication* class:
+Our API entry point is the below *FinalApiApplication* class:
 
 <div className="smallimage">
 ![startup logic](/images/370/startup-logic.jpg)
@@ -326,7 +326,7 @@ Error output has a productive and readable format, and production logs will also
 {
   "id" : "2bcf50e1-8a11-4c3e-ae59-c3265693de00",
   "utcTime" : "2022-12-10T18:38:14.233698634Z",
-  "apiName" : "SampleApi",
+  "apiName" : "FinalApi",
   "operationName" : "getCompanyTransactions",
   "hostName" : "WORK",
   "method" : "GET",
@@ -356,7 +356,7 @@ Error output has a productive and readable format, and production logs will also
     "clientError" : {
       "code" : "exception_simulation",
       "message" : "An exception was simulated in the API",
-      "area" : "SampleApi",
+      "area" : "FinalApi",
       "id" : 15203,
       "utcTime" : "2022-12-10T18:38:14.236384348Z"
     },
