--- a/posts/web-architecture-goals.mdx
+++ b/posts/web-architecture-goals.mdx
@@ -4,7 +4,7 @@ The <Link href='/'>Home Page</Link> described OAuth in terms of overall goals f
 
 ### Best User Experience
 
-Client-side web apps separate HTML and data concerns to deliver a fast experience for end users. A *Single Page Application (SPA)* puts the frontend in control. Modern technologies such as React provide an ecosystem with many tools and techniques for building modern apps.
+Client-side web apps separate HTML and data concerns to deliver a fast experience for users. A *Single Page Application (SPA)* puts the frontend in control. Modern technologies such as React provide an ecosystem with many tools and techniques for building modern apps.
 
 ![React SPA framework](/images/10/react.jpg)
 
@@ -33,7 +33,7 @@ If an app has XSS vulnerabilities, then an attacker may be able to access secure
 OpenID Connect can provide multiple ways for users to sign in to an SPA, and this can include options that are both user friendly and secure. In addition, an SPA should be in full control of its usability behaviour:
 
 - <span style={{color:'green'}}>**Session Behaviour**</span>: the UI should be in control of navigation and expiry events rather than being abruptly redirected.
-- <span style={{color:'green'}}>**Multi-Tab Browsing**</span>: the end user should be able to use multiple browser tabs for the same application.
+- <span style={{color:'green'}}>**Multi-Tab Browsing**</span>: the user should be able to use multiple browser tabs for the same application.
 
 ### Good Search Results
 
