--- a/posts/api-automated-tests.mdx
+++ b/posts/api-automated-tests.mdx
@@ -221,7 +221,7 @@ The load test also sends input fields that might give a load tester best options
 | ----- | ----------- |
 | <span style={{color:'green'}}>**Session ID**</span> | An identifier to group all requests in the load test, used to ignore other entries |
 | <span style={{color:'green'}}>**Correlation ID**</span> | An identifier for a single request, to enable slow or failed requests to be quickly looked up |
-| <span style={{color:'green'}}>**Client Application Name**</span> | The name of the load test, as a mechanism to find all load test sessions |
+| <span style={{color:'green'}}>**Client Name**</span> | The name of the load test, as a mechanism to find all load test sessions |
 
 ### Analysing Load Test Results
 
