--- a/posts/id-tokens.mdx
+++ b/posts/id-tokens.mdx
@@ -1,6 +1,6 @@
 # ID Tokens
 
-Previously I explained some <Link href='/posts/logout'>Logout</Link> behaviours. I finish the discussion on SPA session management by describing the role of ID tokens, which are designed to be read by client applications rather than APIs.
+Previously I explained some <Link href='/posts/logout'>Logout</Link> behaviours. I finish the discussion on SPA session management by describing the role of ID tokens, which are designed to be read by clients rather than APIs.
 
 ### ID Token Role
 
