--- a/posts/azure-active-directory-setup.mdx
+++ b/posts/azure-active-directory-setup.mdx
@@ -1,6 +1,6 @@
 # Microsoft Entra ID SPA and API Setup
 
-The previous post provided an <Link href='/posts/updated-api-coding-key-points'>API Code Details</Link> for the second code sample. Next I port the code sample to [Microsoft Entra ID](https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id) and use the same libraries in the SPA and API.
+The previous post provided some <Link href='/posts/updated-api-coding-key-points'>API Code Details</Link> for the second code sample. Next I port the code sample to [Microsoft Entra ID](https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id) and use the same libraries in the SPA and API.
 
 ### Main Objective
 
