--- a/posts/basicspa-codingkeypoints.mdx
+++ b/posts/basicspa-codingkeypoints.mdx
@@ -511,9 +511,9 @@ OAuth introduces additional endpoints, messages and configuration settings into 
 
 ### Where Are We?
 
-I explained the initial SPA's code, where the oidc-client-ts security library is doing the difficult security work. I extend the SPA’s code in the second code sample, to complete its session management.
+I summarised the initial SPA's code, where the oidc-client-ts security library is doing the difficult security work. I extend the SPA’s code in the second code sample, to complete its session management.
 
 ### Next
 
-- I provide an <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link> for the first code sample.
+- I explain some <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link> for the first code sample.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
