--- a/posts/desktop-apps-overview.mdx
+++ b/posts/desktop-apps-overview.mdx
@@ -106,5 +106,5 @@ This post explained the behaviours of the initial desktop code sample, to get lo
 
 ### Next
 
-- Next we will explain How to <Link href='/posts/desktop-app-how-to-run-the-code-sample'>Run the Desktop Code Sample</Link>
+- Next I explain <Link href='/posts/desktop-app-how-to-run-the-code-sample'>How to Run the Desktop Code Sample</Link>
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
