--- a/posts/jwt-access-token-validation.mdx
+++ b/posts/jwt-access-token-validation.mdx
@@ -1,6 +1,6 @@
 # JWT Access Token Validation
 
-The previous post provided an <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link> for the initial code sample. Next I explain the most mainstream way in which APIs validate JWT access tokens. These techniques are covered in many other OAuth resources. This post summarises a few security best practices, but focuses primarily on a productive development setup when working with JWTs.
+The previous post provided some <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link> for the initial code sample. Next I explain the most mainstream way in which APIs validate JWT access tokens. These techniques are covered in many other OAuth resources. This post summarises a few security best practices, but focuses primarily on a productive development setup when working with JWTs.
 
 ### Common Requirements
 
