--- a/posts/updated-spa-coding-key-points.mdx
+++ b/posts/updated-spa-coding-key-points.mdx
@@ -311,5 +311,5 @@ I explained the code to complete the traditional SPA flow, with in-memory storag
 
 ### Next
 
-- Next I provide an <Link href='/posts/updated-api-coding-key-points'>Updated API Code Details</Link>.
+- Next I provide some <Link href='/posts/updated-api-coding-key-points'>Updated API Code Details</Link>.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
