--- a/posts/android-infrastructure-setup.mdx
+++ b/posts/android-infrastructure-setup.mdx
@@ -216,5 +216,5 @@ We have explained some infrastructure plumbing needed for our Android code sampl
 
 ### Next
 
-- Next I provide an <Link href='/posts/android-coding-key-points'>Android Code Details</Link>
+- Next I provide some <Link href='/posts/android-coding-key-points'>Android Code Details</Link>
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
