--- a/posts/how-to-run-the-ios-code-sample.mdx
+++ b/posts/how-to-run-the-ios-code-sample.mdx
@@ -25,13 +25,9 @@ git clone https://github.com/gary-archer/oauth.mobilesample.ios
 
 ### Step 2: Open the Project in Xcode
 
-In Xcode the project layout looks as follows, and our Swift code is under the *Source* folder. I used techniques from [this link](https://stevenpcurtis.medium.com/how-to-structure-your-folders-in-xcode-fbb1afa50bc7) to control the folder layout.
+In Xcode the project layout looks as follows, and our Swift code is under the *Source* folder. Then run the app on a simulator, with your default *Signing and Capabilities* settings, which can be empty if required:
 
-![project layout](/images/550/project-layout.jpg?v=20240713)
-
-Then run the app on a simulator, with your default *Signing and Capabilities* settings, which can be empty if required:
-
-![emulator settings](/images/550/simulator-settings.jpg?v=20240713)
+![project layout](/images/550/project-layout.jpg?v=20240914)
 
 ### Step 3: Understand Dependencies
 
@@ -45,11 +41,7 @@ We are using the following external dependencies:
 
 These references were added via the *Swift Package Manager* and are built as libraries:
 
-![dependencies](/images/550/dependencies.jpg?v=20240713)
-
-I then linked with the built libraries from the following page:
-
-![library linking](/images/550/library-linking.jpg?v=20240713)
+![dependencies](/images/550/dependencies.jpg?v=20240914)
 
 ### Step 4: Run the App on a Simulator
 
@@ -61,13 +53,13 @@ You can now run our demo app via the *Run* icon in the Xcode toolbar. You may th
 Next save the password when prompted, then navigate between views by clicking an item in the companies view or using the *Home* button:
 
 <div className="smallimage">
-![running app](/images/550/running-app.jpg?v=20240714)
+![running app](/images/550/running-app.jpg?v=20240914)
 </div>
 
 Logins require associated domain registration to work on your simulator. If registration fails, you will receive the following display. The cause is that a mobile deep link is incorrectly processed in the browser. The next post, on iOS infrastructure, explains how you can resolve this problem, if it impacts you.
 
 <div className="smallimage">
-![not found login response](/images/550/not-found-login-response.jpg?v=20240713)
+![not found login response](/images/550/not-found-login-response.jpg?v=20240914)
 </div>
 
 ### Step 5: Understand Configuration Settings
@@ -96,18 +88,18 @@ When our app runs it uses the API and OAuth settings from an embedded JSON confi
 
 By using AppAuth libraries the standard *Authorization Code Flow (PKCE)* message is sent.
 
-![authorization request](/images/550/authorization-request.jpg)
+![authorization request](/images/550/authorization-request.jpg?v=20240914)
 
 Our AWS Cognito authorization server accepts the request and issues an authorization code because the *Client ID*, *Redirect URI* and *Scope* of the request match those configured in a Cognito OAuth client:
 
-![oauth client 1](/images/550/oauth-client1.jpg)
-![oauth client 2](/images/550/oauth-client2.jpg)
+![oauth client 1](/images/550/oauth-client1.jpg?v=20240914)
+![oauth client 2](/images/550/oauth-client2.jpg?v=20240914)
 
 ### Step 7: Understand Redirect Response Handling
 
 The result of successful authorization is the following message, and note that this is sent to a web domain rather than directly to our iOS app:
 
-![authorization response](/images/550/authorization-response.jpg)
+![authorization response](/images/550/authorization-response.jpg?v=20240914)
 
 Two interstitial web pages are used with our iOS sample, hosted at the following URLs:
 
@@ -116,7 +108,7 @@ Two interstitial web pages are used with our iOS sample, hosted at the following
 
 If we use the *View Source* option in a desktop browser for one of the above URLs, we can see that they just forward query parameters from the login response using a deep linking URL:
 
-![view source](/images/550/view-source.jpg)
+![view source](/images/550/view-source.jpg?v=20240914)
 
 For this to work we need to register the *https://mobile.authsamples.com* base URL as an *Associated Domain* in the *finalmobileapp.entitlements* file:
 
@@ -137,7 +129,7 @@ For this to work we need to register the *https://mobile.authsamples.com* base U
 
 Once the authorization code is received by the app, it sends an *Authorization Code Grant* request to Cognito’s token endpoint, which returns OAuth tokens in the response:
 
-![authorization code grant](/images/550/authorization-code-grant.jpg)
+![authorization code grant](/images/550/authorization-code-grant.jpg?v=20240914)
 
 The token data is then saved to the iOS keychain, which ensures that the data is kept private to this particular mobile app.
 
@@ -146,20 +138,18 @@ The token data is then saved to the iOS keychain, which ensures that the data is
 It is worth performing certain tests while the ASWebAuthenticationSession window is active, to ensure that the app does not throw exceptions or recreate views unnecessarily:
 
 <div className="smallimage">
-![login](/images/550/login.jpg?v=20240713)
+![login](/images/550/login.jpg?v=20240914)
 </div>
 
 The first of these is to switch away from the app and then reactivate it from its shortcut. Verify that this does not cause any application problems:
 
 <div className="smallimage">
-![shortcut](/images/550/shortcut.jpg)
+![shortcut](/images/550/shortcut.jpg?v=20240914)
 </div>
 
 Similarly I would recommend changing the screen orientation half way through login and then completing the sign in.
 
-<div className="smallimage">
-![landscape](/images/550/landscape.jpg?v=20240713)
-</div>
+![landscape](/images/550/landscape.jpg?v=20240914)
 
 ### Step 10: Test Restarting the App after Login
 
@@ -178,24 +168,24 @@ xcrun simctl openurl booted https://mobile.authsamples.com/finalmobileapp/deepli
 We can use the *Expire Access Token* and *Reload Data* buttons to cause an invalid token to be sent to the API, resulting in a 401 response:
 
 <div className="smallimage">
-![access token expiry](/images/550/access-token-expiry.jpg?v=20240713)
+![access token expiry](/images/550/access-token-expiry.jpg?v=20240914)
 </div>
 
 After every API call the UI checks for 401 responses, and handles them by getting a new access token. The API request is then retried once with the new token, so that the user session is silently extended. Note that a mobile app is a public client and the refresh token is not protected with a client credential:
 
-![concurrent refresh](/images/550/concurrent-refresh.jpg)
+![concurrent refresh](/images/550/concurrent-refresh.jpg?v=20240914)
 
 ### Step 13: Test Refresh Token Expiry
 
 We can use *Expire Refresh Token* followed by *Reload Data* to simulate the end of a user session, which might occur if a user left the app running overnight:
 
 <div className="smallimage">
-![refresh token expiry](/images/550/refresh-token-expiry.jpg?v=20240713)
+![refresh token expiry](/images/550/refresh-token-expiry.jpg?v=20240914)
 </div>
 
 On the next request for data the attempt to renew the access token will fail, and the result of the refresh token grant message will be an *Invalid Grant* response:
 
-![invalid grant](/images/550/invalid-grant.jpg)
+![invalid grant](/images/550/invalid-grant.jpg?v=20240914)
 
 This will trigger a login redirect, and the user may be prompted to sign in again, but will experience no errors.
 
@@ -203,12 +193,12 @@ This will trigger a login redirect, and the user may be prompted to sign in agai
 
 AWS Cognito also uses a vendor specific logout solution and the logout request requires *client_id* and *logout_url* parameters. AppAuth libraries add some other standards-based parameters. The session cookie is successfully removed though, so there is a working logout solution.
 
-![logout request](/images/550/logout-request.jpg)
+![logout request](/images/550/logout-request.jpg?v=20240914)
 
 When logout completes we are returned to the below post logout view within our app. In a real world app you could then test logging in as another user with different settings or permissions.
 
 <div className="smallimage">
-![new user login](/images/550/new-user-login.jpg?v=20240713)
+![new user login](/images/550/new-user-login.jpg?v=20240914)
 </div>
 
 ### Step 15: Test Failure Scenarios
@@ -223,13 +213,13 @@ Our mobile app runs multiple views which could fail concurrently, so we implemen
 Our error display looks as follows after concurrent view failures. The user can click a hyperlink to see details, or press the *Home* button to retry:
 
 <div className="smallimage">
-![error summary](/images/550/error-summary.jpg?v=20240713)
+![error summary](/images/550/error-summary.jpg?v=20240914)
 </div>
 
 The summary view uses an iOS modal sheet to display a view with error details, which would help to enable fast problem resolution:
 
 <div className="smallimage">
-![error details](/images/550/error-details.jpg?v=20240713)
+![error details](/images/550/error-details.jpg?v=20240914)
 </div>
 
 ### Where Are We?
